--- a/src/js/gameField/gameField.css
+++ b/src/js/gameField/gameField.css
@@ -7,11 +7,12 @@
 .game-field {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-column-gap: 2px;
-  grid-row-gap: 2px;
+  grid-column-gap: 30px;
+  grid-row-gap: 30px;
   padding: 10px;
   border: 2px solid #fff;
   border-radius: 30px;
+  cursor: url('./hammer.png') 0 56, auto;
 }
 
 .cell {
@@ -20,4 +21,21 @@
   background-color: rgb(240, 240, 180);
   border-radius: 30px;
   position: relative;
+}
+
+.hit,
+.miss {
+  width: 30px;
+  height: 30px;
+  padding: 15px;
+  font-size: 24px;
+}
+
+.hit {
+  color: rgb(0, 255, 0);
+}
+
+.miss {
+  color: rgb(255, 0, 0);
+  right: 0;
 }
